--- a/ansible/xymon-server.yml
+++ b/ansible/xymon-server.yml
@@ -134,6 +134,8 @@
         dest: "~xymon/{{ xymon_archive_file_name }}"
         owner: "xymon"
         group: "xymon"
+      retries: 5
+      delay: 10
 
     - name: unpack installation archive
       unarchive:
