--- a/ansible/xymon-server.yml
+++ b/ansible/xymon-server.yml
@@ -134,6 +134,8 @@
         dest: "~xymon/{{ xymon_archive_file_name }}"
         owner: "xymon"
         group: "xymon"
+      register: get_install_archive_out
+      until: not get_install_archive_out.failed
       retries: 5
       delay: 10
 
