--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -25,8 +25,8 @@ Vagrant.configure("2") do |config|
 
   config.vm.box = "bento/centos-7.3"
   config.vm.graceful_halt_timeout = 180 # seconds
+  config.vm.boot_timeout = 180 # seconds
   # config.vm.box_check_update = false
-  # config.vm.box_version = "2.3.8"
   config.vm.box_version = "201708.22.0"
   config.ssh.insert_key = true
   #config.ssh.forward_agent = true
@@ -42,7 +42,7 @@ Vagrant.configure("2") do |config|
   # if File.directory? ('C:/')
   #   config.vm.synced_folder "C:/", "/vagrant_c"
   # end
-
+  config.vm.synced_folder "../", "/vagrant"
 
   # Test server 1
   config.vm.define "svr1" do |cfg|
@@ -71,15 +71,15 @@ Vagrant.configure("2") do |config|
     xymon.vm.provision "shell", path: "scripts/install-ansible.sh"
 
     xymon.vm.provision "ansible_local" do |ansible|
-      ansible.playbook = "scripts/init-control-machine.yml"
+      ansible.playbook = "vagrant/scripts/init-control-machine.yml"
     end
 
     xymon.vm.provision "ansible_local" do |ansible|
-      ansible.playbook = "scripts/install-git-client.yml"
+      ansible.playbook = "vagrant/scripts/install-git-client.yml"
     end
 
     # Using the ansible_local method fails to connect to clients ? The above shell command works.
-    xymon.vm.provision "shell", inline: "cd /vagrant ; ansible-playbook scripts/common-baseline.yml"
-    xymon.vm.provision "shell", inline: "cd /vagrant ; ansible-playbook scripts/setup-repo-clones.yml", privileged: false
+    xymon.vm.provision "shell", inline: "cd /vagrant/vagrant ; ansible-playbook scripts/common-baseline.yml"
+    #xymon.vm.provision "shell", inline: "cd /vagrant ; ansible-playbook scripts/setup-repo-clones.yml", privileged: false
   end
 end
