added checksum check for xymon archive file

--- a/ansible/vars/common.yml
+++ b/ansible/vars/common.yml
@@ -4,3 +4,4 @@ xymon_dns_name: "xymon"
 xymon_version: "4.3.28"
 xymon_client_base_file_name: "xymon-client{{ xymon_version }}"
 xymon_client_archive_file_name: "{{ xymon_client_base_file_name }}.tar.gz"
+xymon_client_archive_file_checksum: "sha256:68cb33eb48d1bb212a1bbafd9fdea8c682ae1b69077cd5fb03676e0af39cbf80"
