--- a/ansible/xymon-server.yml
+++ b/ansible/xymon-server.yml
@@ -134,6 +134,7 @@
         dest: "~xymon/{{ xymon_archive_file_name }}"
         owner: "xymon"
         group: "xymon"
+        checksum: "{{ xymon_client_archive_file_checksum }}"
       register: get_xymon_archive_out
       until: get_xymon_archive_out|succeeded
       retries: 5
