--- a/ansible/vars/common.yml
+++ b/ansible/vars/common.yml
@@ -1,6 +1,8 @@
 xymon_server_ip: "10.10.10.10"
 xymon_dns_name: "xymon"
 
+proxy_url: "http://proxy.sdsp.dk:3128"
+
 xymon_version: "4.3.28"
 xymon_client_base_file_name: "xymon-client{{ xymon_version }}"
 xymon_client_archive_file_name: "{{ xymon_client_base_file_name }}.tar.gz"
