xymon ps client daily restart added

--- a/ansible/vars/common.yml
+++ b/ansible/vars/common.yml
@@ -1,7 +1,7 @@
 xymon_server_ip: "10.10.10.10"
 xymon_dns_name: "xymon"
 
-proxy_url: "http://proxy.sdsp.dk:3128"
+proxy_url: ""
 
 xymon_version: "4.3.28"
 xymon_client_base_file_name: "xymon-client{{ xymon_version }}"
